specification/specs/x_pack/security/user/invalidate_user_access_token/InvalidateUserAccessTokenResponse.ts
class InvalidateUserAccessTokenResponse extends ResponseBase implements IResponse {
	error_count: long;
	error_details: ErrorCause[];
	invalidated_tokens: long;
	previously_invalidated_tokens: long;
}
